<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="123dp">

            <TextView
                android:id="@+id/textSpinUtil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical|center_horizontal"
                android:padding="3dp"
                android:scrollbars="horizontal"
                android:text="@string/utilities"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.296" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|center"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="3dp">

            <Spinner
                android:id="@+id/utilities"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@android:color/background_light"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_margin="3dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center_horizontal|center"
                android:padding="3dp"
                android:text="@string/text_date_actv"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="3dp">

            <Spinner
                android:id="@+id/act_month_spin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/background_light" />

            <Spinner
                android:id="@+id/act_year_spin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:background="@android:color/background_light"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="244dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutTextNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center_horizontal|center"
                android:padding="3dp"
                android:text="@string/text_date_new"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSpinNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="3dp">

            <Spinner
                android:id="@+id/new_month_spin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/background_light" />

            <Spinner
                android:id="@+id/new_year_spin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:background="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@android:color/holo_green_dark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:background="@android:color/holo_green_light"
                android:paddingTop="3dp"
                android:paddingRight="1dp"
                android:paddingBottom="3dp"
                android:text="@string/text_view_sum"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:inputType="number|numberDecimal"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="horizontal"
            android:padding="3dp">

            <Button
                android:id="@+id/button_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_margin="3dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/show_settings"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@android:color/holo_green_dark"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:visibility="visible">

            <ListView
                android:id="@+id/list_util"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>